--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "confetti-react": "^2.5.0",
+    "ityped": "^1.0.3",
+    "particles-bg": "^2.5.5",
     "react": "^17.0.2",
+    "react-canvas-confetti": "^1.2.1",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-scripts": "5.0.0",
+    "react-use-window-size": "^1.0.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -34,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.1",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.8"
   }
 }
